overflow issue fix

--- a/docs/src/styles/component.layout.scss
+++ b/docs/src/styles/component.layout.scss
@@ -73,7 +73,7 @@ pre[class*='language-'] {
 
   .component-content {
     flex: 1;
-    overflow-x: auto;
+    
     .component-description {
       margin-bottom: var(--spacing-600);
     }
